2004-05-10  Andreas Kupries  <andreask@activestate.com>

	* mime.tcl (copymessageaux): Applied the patch for [SF Tcllib Bug
	  893516] on behalf of Marshall Rose. The problem was found by
	  Todd Copeland <todd.copeland@pervasive.com>, he provided the
	  patch as well.

2004-05-04  Andreas Kupries  <andreask@activestate.com>

	* mime.man:
	* mime.test:
	* mime.tcl: Applied [SF Tcllib Patch 763712]. This extends the
	  functionality of mime::getbody with decoding of the mime part
	  based on the specified charset into the regular utf8
	  form. Testsuite was updated and extended as well. Thanks to
	  Matthew Walker <gunzel@users.sourceforge.net> for the
	  work. Updated the documentation for mime on my own. Bumped
	  version to 1.4.

	* mime:test:
	* mime.tcl: Applied [SF Tcllib Patch 758742], adding many more
	  MIME types for encodings to the knowledge-base of the
	  package. Thanks to Matthew Walker <gunzel@users.sourceforge.net>
	  for the work, and Mikhail Teterin <kot@users.sourceforge.net>
	  for prodding. Bumped version to 1.3.5.

	* mime.test:
	* mime.tcl (copymessageaux): Fixed [SF Tcllib Bug 620852]. Added
	  '-nonewline' to the puts statements which wrote out the chunks
	  read from the file associated with the mime part, converted or
	  not. As the data was [read] we had no business of adding eol's
	  during writing as well. Thanks to Jasper Taylor
	  <jaspert@users.sourceforge.net> for the report, and his
	  patience. Added a test for this as well, using files of similar
	  size as originally provided.

2004-03-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* smtp.tcl: Added support for RFC 2554 - SMTP Authentication. This
	included support for the SASL mechanisms CRAM-MD5 and PLAIN and
	the Microsoft LOGIN mechanism. This has been tested against
	Microsoft Exchange servers and Sendmail 8.12.
	Added support for RFC 1870, the SIZE extension.

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*